# trace

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
backend/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
backend/src/: index.ts
backend/src/routes/: videos.ts
backend/src/scripts/: bulk-import.ts  bulkVideoImport.ts
backend/src/utils/: localVectorDB.ts  screenshotSearch.ts  videoProcessing.ts
embeddings-service/: dev_main.py  main.py  pyproject.toml
embeddings-service/chroma_db/34a63f10-e9ee-4295-8e42-06bc3bfd131f/: index_metadata.pickle
frontend/: package-lock.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: index.css
frontend/src/components/: CinemaBackground.tsx  ImageUpload.tsx  SamplesPicker.tsx
frontend/src/hooks/: useFlash.tsx
frontend/src/routes/: Main.tsx
src/: App.tsx
src/components/: ImageUpload.tsx  SamplesPicker.tsx
src/hooks/: useFlash.tsx  usePaste.tsx
src/routes/: Main.tsx
