[project]
name = "embeddings-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.15",
    "dotenv>=0.9.9",
    "fastapi==0.104.1",
    "numpy>=1.24.0",
    "open-clip-torch==2.23.0",
    "opencv-python>=4.11.0.86",
    "pillow>=10.0.0",
    "protobuf==3.20.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart==0.0.6",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "uvicorn[standard]==0.24.0",
]
